--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/quarentine/_article_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/article_styles/quarentine/_article_styles.scss
@@ -249,7 +249,7 @@ ul#list__strengths_container > li {
 
 #strengths__panel_wrapper--smm, #strengths__panel_wrapper--dad, #strengths__panel_wrapper--opi {
   h3, p, ul, li, .list__header, .panel__footnote {
-    color: $white;
+    color: $blue;
   }
 }
 
