--- a/wp-content/themes/understrap-child/sass/theme/partials/utilities/quarentine/_graphics_and_artwork_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/utilities/quarentine/_graphics_and_artwork_styles.scss
@@ -370,6 +370,13 @@ width: 80%;
 }
 
 
+.strengths__icon > #Speech_Bubble{
+     .cls-1, .cls-3{
+        fill: $gray-800;
+    }
+}
+
+
 .overlay__content--icon {
       fill: $capabilities-overlay-icon-fill-color;
     .cls-1, .cls-2 {
