--- a/wp-content/themes/understrap-child/sass/theme/partials/base/quarentined dupes/_container_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/base/quarentined dupes/_container_styles.scss
@@ -1,35 +1,23 @@
-.container{
-	@include push-auto();
-}
-
-
-
-@include mq('phablet', $type:max){
+	#idooutcomes{ width: 30px;}
+@media (max-width:35em) {
 	.navbar>.container, .navbar>.container-fluid { width: 90%; position: relative; margin: 0 auto; }
 	.container { width: 90%; padding-left: 0; padding-right: 0; max-width: 90%; }
 }
-@include mq('phablet'){
+@media (min-width:35em) {
 	.navbar>.container, .navbar>.container-fluid { position: relative; margin: 0 auto; width: 100%; max-width: 100%; padding: 0 2em; }
 }
 @include mq('phone') { }
 @include mq('phone-wide') { 
 	.container { padding-left: 0; padding-right: 0; }
 }
-@include mq('phablet') {
-	.strengths__panel_wrapper{@include vr($padding: 5, $width: 100%);
- }
-}
+@include mq('phablet') { }
 @include mq('tablet-small') { }
 @include mq('tablet') { 
-	.container { max-width: 80%; width: 80%; }
-
+	.container { max-width: 60em; width: 60em; }
 }
-
 @include mq('tablet-wide') { 
-	.strengths__panel_wrapper { max-width: 99em; width: 99em; } 
+	.container { max-width: 99em; width: 99em; } 
 	.navbar>.container, .navbar>.container-fluid { width: 90%; max-width: 90%; }
-	.section__head_homepage--summary{width: 80%; margin: 0 auto;}
-
 }
 
 @include mq('desktop') {}
@@ -44,15 +32,6 @@
 // ==========================================================================
 // misc adjustments
 // ==========================================================================
-
-//
-// homepage content
-//
-
-
-
-
-
 
 //
 // services & capabilities articles & panels
